# ScaleGuard

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  dump.rdb
.github/workflows/: ci.yml
benchmarks/: throughput.cpp
include/api/: server.h
include/metrics/: metrics.h
include/rate_limiter/: fixed_window.h  token_bucket.h
include/storage/: memory_store.cpp  memory_store.h  redis_store.h  storage.h
src/: main.cpp
src/api/: server.cpp
src/rate_limiter/: fixed_window.cpp  token_bucket.cpp
src/storage/: memory_store.cpp  redis_store.cpp
tests/: test_fixed_window.cpp  test_redis_store.cpp  test_storage.cpp  test_token_bucket.cpp
